@@ -1,14 +1,15 @@
-# $NetBSD: Makefile,v 1.5 2020/01/26 17:31:24 rillig Exp $
+# $NetBSD: Makefile,v 1.6 2020/11/29 23:10:25 dbj Exp $
 #
 
-DISTNAME=	codec2-0.5.1
+# https://github.com/drowe67/codec2/archive/v0.9.2.tar.gz
+DISTNAME=	codec2-0.9.2
 CATEGORIES=	ham
-MASTER_SITES=	http://files.freedv.org/codec2/
-EXTRACT_SUFX=	.tar.xz
+MASTER_SITES=	${MASTER_SITE_GITHUB:=drowe67/}
+GITHUB_TAG=	v${PKGVERSION_NOREV}
 
 MAINTAINER=	dbj@NetBSD.org
 HOMEPAGE=	https://rowetel.com/codec2.html
-COMMENT=	Speech codec for 2400 bit/s and below
+COMMENT=	Speech codec for between 700 and 3200 bit/s
 
 LICENSE=	gnu-lgpl-v2.1
 
@@ -17,8 +18,15 @@ USE_LANGUAGES=	c
 USE_CMAKE=	yes
 CONFIGURE_DIRS=	build
 CMAKE_ARG_PATH=	..
+CMAKE_ARGS+=	-DCMAKE_BUILD_TYPE=Release
 
 pre-configure:
 	cd ${WRKSRC} && mkdir build
+
+# XXX this creates a circular dependency between
+# lpcnetfreedv and codec2 that requires bootstrapping
+# and causes problems with pkg tools once created.
+#CMAKE_ARGS+=	-DLPCNET=ON
+#.include "../../ham/lpcnetfreedv/buildlink3.mk"
 
 .include "../../mk/bsd.pkg.mk"
