@@ -1,29 +1,35 @@
-@comment $NetBSD: PLIST,v 1.4 2016/01/19 04:02:07 dbj Exp $
+@comment $NetBSD: PLIST,v 1.5 2020/11/29 23:10:25 dbj Exp $
 bin/c2dec
-bin/c2demo
 bin/c2enc
-bin/c2sim
+bin/drs232
+bin/drs232_ldpc
 bin/fdmdv_demod
 bin/fdmdv_get_test_bits
-bin/fdmdv_interleave
 bin/fdmdv_mod
 bin/fdmdv_put_test_bits
-bin/fec_dec
-bin/fec_enc
 bin/fm_demod
+bin/fsk_mod
 bin/insert_errors
 include/codec2/codec2.h
 include/codec2/codec2_cohpsk.h
 include/codec2/codec2_fdmdv.h
 include/codec2/codec2_fifo.h
 include/codec2/codec2_fm.h
+include/codec2/codec2_ofdm.h
 include/codec2/comp.h
 include/codec2/comp_prim.h
+include/codec2/filter.h
 include/codec2/freedv_api.h
 include/codec2/freedv_api_internal.h
+include/codec2/fsk.h
 include/codec2/golay23.h
+include/codec2/horus_api.h
 include/codec2/kiss_fft.h
 include/codec2/modem_stats.h
 include/codec2/varicode.h
+include/codec2/version.h
+lib/cmake/codec2/codec2-config-release.cmake
+lib/cmake/codec2/codec2-config.cmake
 lib/libcodec2.so
-lib/libcodec2.so.0.5
+lib/libcodec2.so.0.9
+lib/pkgconfig/codec2.pc
